<resources>
    <string name="app_name">How to rank a good Steak</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_moisture">Moisture</string>
    <string name="menu_tenderness">Tenderness</string>
    <string name="menu_saltiness">Saltiness</string>
    <string name="menu_taste">Taste</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
