<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_moisture"
    >

    <fragment
        android:id="@+id/nav_moisture"
        android:name="com.example.howtorankagoodsteak.ui.home.HomeFragment"
        android:label="@string/menu_moisture"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_tenderness"
        android:name="com.example.howtorankagoodsteak.ui.gallery.GalleryFragment"
        android:label="@string/menu_tenderness"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_saltiness"
        android:name="com.example.howtorankagoodsteak.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_saltiness"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_taste"
        android:name="com.example.howtorankagoodsteak.ui.tools.ToolsFragment"
        android:label="@string/menu_taste"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.howtorankagoodsteak.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.howtorankagoodsteak.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>